--- a/Solution/Tests/Tests.csproj
+++ b/Solution/Tests/Tests.csproj
@@ -48,6 +48,7 @@
     <Compile Include="ConvolutionTest.cs" />
     <Compile Include="CorrelationTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SignalSaverTest.cs" />
     <Compile Include="SignalTest.cs" />
   </ItemGroup>
   <ItemGroup>
