--- a/Solution/DSP/DSP.csproj
+++ b/Solution/DSP/DSP.csproj
@@ -41,14 +41,17 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Convolution.cs" />
+    <Compile Include="FileVesionException.cs" />
     <Compile Include="RemoveConstant.cs" />
     <Compile Include="SignalRandomLoader.cs" />
     <Compile Include="Signal.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SignalLoader.cs" />
     <Compile Include="SignalSaver.cs" />
+    <Compile Include="SignatureException.cs" />
     <Compile Include="Statictics\Statictics.cs" />
     <Compile Include="Transformation.cs" />
+    <Compile Include="UnknownChankException.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
