Чанковая структура файлов

--- a/Solution/DSP/DSP.csproj
+++ b/Solution/DSP/DSP.csproj
@@ -40,9 +40,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ChankReader.cs" />
     <Compile Include="Convolution.cs" />
     <Compile Include="FileVesionException.cs" />
     <Compile Include="RemoveConstant.cs" />
+    <Compile Include="SignalChank.cs" />
     <Compile Include="SignalRandomLoader.cs" />
     <Compile Include="Signal.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
