--- a/Solution/Tests/Tests.csproj
+++ b/Solution/Tests/Tests.csproj
@@ -49,6 +49,7 @@
     <Compile Include="ConvolutionTest.cs" />
     <Compile Include="CorrelationTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SignalChankTest.cs" />
     <Compile Include="SignalLoaderTest.cs" />
     <Compile Include="SignalLoadSaveTest.cs" />
     <Compile Include="SignalSaverTest.cs" />
