--- a/Solution/Tests/Tests.csproj
+++ b/Solution/Tests/Tests.csproj
@@ -48,11 +48,11 @@
   <ItemGroup>
     <Compile Include="ConvolutionTest.cs" />
     <Compile Include="CorrelationTest.cs" />
+    <Compile Include="Infrastructure\SignalChankReaderTest.cs" />
+    <Compile Include="Infrastructure\SignalLoaderTest.cs" />
+    <Compile Include="Infrastructure\SignalLoadSaveTest.cs" />
+    <Compile Include="Infrastructure\SignalSaverTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SignalChankReaderTest.cs" />
-    <Compile Include="SignalLoaderTest.cs" />
-    <Compile Include="SignalLoadSaveTest.cs" />
-    <Compile Include="SignalSaverTest.cs" />
     <Compile Include="SignalTest.cs" />
   </ItemGroup>
   <ItemGroup>
