--- a/Solution/DSP/DSP.csproj
+++ b/Solution/DSP/DSP.csproj
@@ -41,7 +41,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Convolution.cs" />
+    <Compile Include="Infrastructure\Chanks\Chank.cs" />
     <Compile Include="Infrastructure\Chanks\ChankReader.cs" />
+    <Compile Include="Infrastructure\Chanks\ChankWriter.cs" />
     <Compile Include="Infrastructure\Chanks\SignalChankReader.cs" />
     <Compile Include="Infrastructure\Chanks\SignalChankWriter.cs" />
     <Compile Include="Infrastructure\Chanks\UnknownChankException.cs" />
