--- a/Solution/DSP/DSP.csproj
+++ b/Solution/DSP/DSP.csproj
@@ -42,13 +42,16 @@
   <ItemGroup>
     <Compile Include="Convolution.cs" />
     <Compile Include="Infrastructure\Chanks\Chank.cs" />
-    <Compile Include="Infrastructure\Chanks\ChankArray.cs" />
-    <Compile Include="Infrastructure\Chanks\ChankReader.cs" />
-    <Compile Include="Infrastructure\Chanks\ChankSignal.cs" />
-    <Compile Include="Infrastructure\Chanks\ChankWriter.cs" />
-    <Compile Include="Infrastructure\Chanks\SignalChankReader.cs" />
-    <Compile Include="Infrastructure\Chanks\SignalChankWriter.cs" />
-    <Compile Include="Infrastructure\Chanks\StreamedChank.cs" />
+    <Compile Include="Infrastructure\Chanks\ArrayChank.cs" />
+    <Compile Include="Infrastructure\Chanks\Reader\ArrayChankReader.cs" />
+    <Compile Include="Infrastructure\Chanks\Reader\ChankReader.cs" />
+    <Compile Include="Infrastructure\Chanks\Reader\ChankReaderFactory.cs" />
+    <Compile Include="Infrastructure\Chanks\SignalChank.cs" />
+    <Compile Include="Infrastructure\Chanks\Reader\SignalChankReader.cs" />
+    <Compile Include="Infrastructure\Chanks\StreamChank.cs" />
+    <Compile Include="Infrastructure\Chanks\TypesChank.cs" />
+    <Compile Include="Infrastructure\Chanks\Writer\ChankWriter.cs" />
+    <Compile Include="Infrastructure\Chanks\Writer\SignalChankWriter.cs" />
     <Compile Include="Infrastructure\Chanks\UnknownChankException.cs" />
     <Compile Include="Infrastructure\FileVesionException.cs" />
     <Compile Include="Infrastructure\SignalLoader.cs" />
