--- a/DSP/DSP.csproj
+++ b/DSP/DSP.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Convolution.cs" />
+    <Compile Include="Infrastructure\Chanks\Writer\ArrayChankWriter.cs" />
     <Compile Include="Infrastructure\Chanks\Chank.cs" />
     <Compile Include="Infrastructure\Chanks\ArrayChank.cs" />
     <Compile Include="Infrastructure\Chanks\Reader\ArrayChankReader.cs" />
@@ -52,6 +53,7 @@
     <Compile Include="Infrastructure\Chanks\StreamChank.cs" />
     <Compile Include="Infrastructure\Chanks\TypesChank.cs" />
     <Compile Include="Infrastructure\Chanks\Writer\ChankWriter.cs" />
+    <Compile Include="Infrastructure\Chanks\Writer\ChankWriterFactory.cs" />
     <Compile Include="Infrastructure\Chanks\Writer\SignalChankWriter.cs" />
     <Compile Include="Infrastructure\Chanks\UnknownChankException.cs" />
     <Compile Include="Infrastructure\FileVesionException.cs" />
