--- a/ApplicationDSP/ApplicationDSP.csproj
+++ b/ApplicationDSP/ApplicationDSP.csproj
@@ -47,15 +47,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\ChartSeriesColleague.cs" />
+    <Compile Include="Controllers\Colleague.cs" />
+    <Compile Include="Controllers\ComboBoxColleague.cs" />
     <Compile Include="FormMain.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="FormMain.Designer.cs">
       <DependentUpon>FormMain.cs</DependentUpon>
     </Compile>
-    <Compile Include="SignalController.cs" />
+    <Compile Include="Controllers\Mediator.cs" />
+    <Compile Include="Controllers\SignalController.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Controllers\SignalMediator.cs" />
+    <Compile Include="Controllers\TransformationsColluegue.cs" />
     <EmbeddedResource Include="FormMain.resx">
       <DependentUpon>FormMain.cs</DependentUpon>
     </EmbeddedResource>
