Почистил код от лишних абстракций. Завистливые функции перенес в соответствующие классы

--- a/ApplicationDSP/ApplicationDSP.csproj
+++ b/ApplicationDSP/ApplicationDSP.csproj
@@ -50,18 +50,18 @@
     <Compile Include="Controllers\ChartSeriesColleague.cs" />
     <Compile Include="Controllers\Colleague.cs" />
     <Compile Include="Controllers\ComboBoxColleague.cs" />
+    <Compile Include="Controllers\TextBoxCollegue.cs" />
     <Compile Include="FormMain.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="FormMain.Designer.cs">
       <DependentUpon>FormMain.cs</DependentUpon>
     </Compile>
-    <Compile Include="Controllers\Mediator.cs" />
-    <Compile Include="Controllers\SignalController.cs" />
+    <Compile Include="AppDialogs.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\SignalMediator.cs" />
-    <Compile Include="Controllers\TransformationsColluegue.cs" />
+    <Compile Include="Controllers\TransformationsColleague.cs" />
     <EmbeddedResource Include="FormMain.resx">
       <DependentUpon>FormMain.cs</DependentUpon>
     </EmbeddedResource>
