--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -58,7 +58,7 @@
     <Compile Include="Infrastructure\Chanks\ChankTest.cs" />
     <Compile Include="Infrastructure\Chanks\ChankArrayTest.cs" />
     <Compile Include="ConvolutionTest.cs" />
-    <Compile Include="Transformation\CorrelationTest.cs" />
+    <Compile Include="Transformation\StatisticsTest.cs" />
     <Compile Include="Infrastructure\Chanks\Reader\ArrayChankReaderTest.cs" />
     <Compile Include="Infrastructure\Chanks\SignalChankTest.cs" />
     <Compile Include="Infrastructure\Chanks\Reader\SignalChankReaderTest.cs" />
