--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -55,6 +55,7 @@
     </CodeAnalysisDependentAssemblyPaths>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Algorithms\FastFourierTransformationTest.cs" />
     <Compile Include="Infrastructure\Chanks\ChankTest.cs" />
     <Compile Include="Infrastructure\Chanks\ChankArrayTest.cs" />
     <Compile Include="ConvolutionTest.cs" />
